// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid plot all should plot grid 1`] = `
<g
  class="grids"
>
  <g
    class="hor-major-Grid"
    fill-opacity="0"
    stroke="#444"
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="20"
      x2="980"
      y1="493"
      y2="493"
    />
    <line
      x1="20"
      x2="980"
      y1="247"
      y2="247"
    />
  </g>
  <g
    class="hor-minor-Grid"
    fill-opacity="0"
    stroke="#eee"
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="20"
      x2="980"
      y1="690"
      y2="690"
    />
    <line
      x1="20"
      x2="980"
      y1="641"
      y2="641"
    />
    <line
      x1="20"
      x2="980"
      y1="592"
      y2="592"
    />
    <line
      x1="20"
      x2="980"
      y1="542"
      y2="542"
    />
    <line
      x1="20"
      x2="980"
      y1="493"
      y2="493"
    />
    <line
      x1="20"
      x2="980"
      y1="444"
      y2="444"
    />
    <line
      x1="20"
      x2="980"
      y1="395"
      y2="395"
    />
    <line
      x1="20"
      x2="980"
      y1="345"
      y2="345"
    />
    <line
      x1="20"
      x2="980"
      y1="296"
      y2="296"
    />
    <line
      x1="20"
      x2="980"
      y1="247"
      y2="247"
    />
    <line
      x1="20"
      x2="980"
      y1="198"
      y2="198"
    />
    <line
      x1="20"
      x2="980"
      y1="148"
      y2="148"
    />
    <line
      x1="20"
      x2="980"
      y1="99"
      y2="99"
    />
    <line
      x1="20"
      x2="980"
      y1="50"
      y2="50"
    />
  </g>
  <g
    class="ver-major-Grid"
    fill-opacity="0"
    stroke="#444"
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="133"
      x2="133"
      y1="690"
      y2="50"
    />
    <line
      x1="698"
      x2="698"
      y1="690"
      y2="50"
    />
  </g>
  <g
    class="ver-minor-Grid"
    fill-opacity="0"
    stroke="#eee"
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="20"
      x2="20"
      y1="690"
      y2="50"
    />
    <line
      x1="133"
      x2="133"
      y1="690"
      y2="50"
    />
    <line
      x1="246"
      x2="246"
      y1="690"
      y2="50"
    />
    <line
      x1="359"
      x2="359"
      y1="690"
      y2="50"
    />
    <line
      x1="472"
      x2="472"
      y1="690"
      y2="50"
    />
    <line
      x1="585"
      x2="585"
      y1="690"
      y2="50"
    />
    <line
      x1="698"
      x2="698"
      y1="690"
      y2="50"
    />
    <line
      x1="811"
      x2="811"
      y1="690"
      y2="50"
    />
    <line
      x1="924"
      x2="924"
      y1="690"
      y2="50"
    />
  </g>
</g>
`;

exports[`Grid plot horizontal should not plot vertical grid 1`] = `
<g
  class="grids"
>
  <g
    class="hor-major-Grid"
    fill-opacity="0"
    stroke="#444"
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="20"
      x2="980"
      y1="493"
      y2="493"
    />
    <line
      x1="20"
      x2="980"
      y1="247"
      y2="247"
    />
  </g>
  <g
    class="hor-minor-Grid"
    fill-opacity="0"
    stroke="#eee"
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="20"
      x2="980"
      y1="690"
      y2="690"
    />
    <line
      x1="20"
      x2="980"
      y1="641"
      y2="641"
    />
    <line
      x1="20"
      x2="980"
      y1="592"
      y2="592"
    />
    <line
      x1="20"
      x2="980"
      y1="542"
      y2="542"
    />
    <line
      x1="20"
      x2="980"
      y1="493"
      y2="493"
    />
    <line
      x1="20"
      x2="980"
      y1="444"
      y2="444"
    />
    <line
      x1="20"
      x2="980"
      y1="395"
      y2="395"
    />
    <line
      x1="20"
      x2="980"
      y1="345"
      y2="345"
    />
    <line
      x1="20"
      x2="980"
      y1="296"
      y2="296"
    />
    <line
      x1="20"
      x2="980"
      y1="247"
      y2="247"
    />
    <line
      x1="20"
      x2="980"
      y1="198"
      y2="198"
    />
    <line
      x1="20"
      x2="980"
      y1="148"
      y2="148"
    />
    <line
      x1="20"
      x2="980"
      y1="99"
      y2="99"
    />
    <line
      x1="20"
      x2="980"
      y1="50"
      y2="50"
    />
  </g>
  <g
    class="ver-major-Grid"
  />
  <g
    class="ver-minor-Grid"
  />
</g>
`;
